# dynamorio

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  ACKNOWLEDGEMENTS  CMakeLists.txt  CMake_events.cmake  CONTRIBUTING.md  CTestConfig.cmake  DynamoRIOConfig.cmake.in  License.txt  Makefile  README  README.md  README_code_standards.html  build_linux.sh  configure.cmake.h  experiment_instructions.txt  generate_multiple_traces_of_matmult.py  i5256_debug_diff  rebuild_all.sh  run.sh  visualize_trace.py
api/docs/: API.doxy  CMakeLists.txt  CMake_doxyfile.cmake  CMake_doxyutils.cmake  CMake_footer.cmake  CMake_rundoxygen.cmake  Makefile  README.md  aaa.dox  aarch64_far.dox  aarch64_port.dox  annotations.dox  arm_port.dox  bt.dox  bug_reporting.dox  building.dox  client.fig  code_content.dox  code_reviews.dox  code_style.dox  code_tips.dox  contributing.dox  debug_memtrace.dox  debugging.dox  deployment.dox  developers.dox  download.dox  ext.gendox  external_decoder.dox  fix-latex.pl  flow-highlevel.fig  flow.fig  footer.html  header.html  help.dox  home.dox  htmlstyle.css  interpose.fig  intro.dox  jitopt.dox  (+25 more)
api/samples/: .gitignore  CMakeLists.txt  MF_moduledb-sample.config  MF_moduledb.c  Makefile  README.md  bbbuf.c  bbcount.c  bbcount_region.c  bbcov.c  bbsize.c  bbv.cpp  callstack.cpp  cbr.c  cbrtrace.c  countcalls.c  dbginstrace.c  dbgmalloc.c  dbgxor.c  div.c  empty.c  hot_bbcount.c  inc2add.c  inline.c  inscount.c  inscount.cpp  instrace_simple.c  instrace_x86.c  instrcalls.c  memtrace.c  memtrace_simple.c  memtrace_x86.c  memval_simple.c  modxfer.c  modxfer_app2lib.c  neoncounter.c  opcode_count.cpp  opcodes.c  prefetch.c  signal.c  (+10 more)
clients/: CMakeLists.txt  README.md
clients/bbcov/: CMakeLists.txt  bbcov.c  bbcov.dox  bbcov.h  bbcov2lcov.c
clients/common/: gendocs.cmake  modules.c  modules.h  utils.h
clients/drcachesim/: CMakeLists.txt  README.md  analysis_tool.h  analysis_tool_interface.h  analyzer.cpp  analyzer.h  analyzer_multi.cpp  analyzer_multi.h  drcachesim.dox.in  gendocs.cmake  launcher.cpp  optionlist.cpp
clients/drcov/: CMakeLists.txt  README.md  drcov.c  drcov.dox  drcov.dox.in  drcov.h  drcov2lcov.c  runtest.cmake
clients/drcpusim/: CMakeLists.txt  README.md  drcpusim.cpp  drcpusim.dox.in  optionlist.cpp  options.cpp  options.h
clients/drdisas/: CMakeLists.txt  drdisas.cpp  drdisas.dox  test_regdeps.template  test_simple.template  test_syntax.template
clients/drdisasm/: CMakeLists.txt  drdisasm.cpp  test_simple.template
clients/drltrace/: CMakeLists.txt  README.md  drltrace.c  drltrace.dox  runtest.cmake
clients/drpoints/: CMakeLists.txt  drpoints.cpp  drpoints.dox
clients/drptpostprocessor/: CMakeLists.txt  drptpostprocessor.c  test_simple.template
clients/standalone/: CMakeLists.txt  Makefile  module_rsrc.c  vista_hash.c  winsysnums.c
core/: CMakeLists.txt  CMake_checkdeps.cmake  CMake_finalize_static_lib.cmake  CMake_globalize_pic_thunks.cmake  CMake_ldscript.cmake  CMake_readelf.cmake  CMake_symbol_check.cmake  Makefile  Makefile.custom_build  README.md  annotations.c  annotations.h  annotations_api.h  asmtable.c  asmtable.h  buildmark.c  config.c  config.h  dispatch.c  dispatch.h  dynamo.c  emit.c  emit.h  fcache.c  fcache.h  fnmatch.c  fragment.c  fragment.h  fragment_api.h  gen_event_strings.pl  globals.h  hashtable.c  hashtable.h  hashtablex.h  heap.c  heap.h  hotpatch.c  hotpatch.h  instrlist.c  instrlist.h  (+46 more)
core/arch/: arch.c  arch.h  arch_exports.h  asm_aux.c  asm_defines.asm  asm_offsets.c  asm_offsets.h  asm_shared.asm  atomic_exports.h  clean_call_opt.h  clean_call_opt_shared.c  decode.c  decode.h  decode_fast.c  decode_fast.h  decode_shared.c  decode_table.c  decodelib.c  disassemble.c  disassemble.h  disassemble_shared.c  emit_utils.c  emit_utils_shared.c  encode.c  encode_shared.c  instr.c  instr.h  instr_create_shared.h  instr_inline.h  instr_shared.c  instrlist.c  instrlist.h  interp.c  loadtoconst.c  loadtoconst.h  mangle.c  mangle_shared.c  mangle_utils.c  opcode.h  opnd.h  (+15 more)
core/client/: annot.c  annot.h
core/drlibc/: drlibc.c  drlibc.h  drlibc_aarch64.asm  drlibc_arm.asm  drlibc_module_elf.c  drlibc_module_macho.c  drlibc_notdr_dcxt.c  drlibc_notdr_error.c  drlibc_notdr_ignoreassert.c  drlibc_notdr_logfile.c  drlibc_notdr_printlog.c  drlibc_notdr_report.c  drlibc_notdr_saferead.c  drlibc_notdr_stats.c  drlibc_riscv64.asm  drlibc_unix.c  drlibc_unix.h  drlibc_x86.asm  drlibc_xarch.asm
core/ir/: category_api.h  decode.h  decode_api.h  decode_fast.h  decode_shared.c  decodelib.c  disassemble.h  disassemble_api.h  disassemble_shared.c  dr_ir_isa_features.h  dr_ir_opcodes.h  encode_api.h  encode_shared.c  instr.h  instr_api.h  instr_create_shared.h  instr_create_shared_api.h  instr_inline.h  instr_inline_api.h  instr_shared.c  instrlist.c  instrlist.h  instrlist_api.h  ir_utils.c  ir_utils.h  ir_utils_shared.c  opnd.h  opnd_api.h  opnd_shared.c  stroff.c  stroff.h
core/lib/: c_defines.h  dr_annotation_asm.h  dr_annotations.c  dr_annotations.h  dr_annotations_asm.h  (+30 more)
ext/: CMakeLists.txt  README  README.md  drext.h  ext_utils.h
libutil/: CMakeLists.txt  Makefile  README.md  config.c  config.h  detach.c  dr_config.c  dr_frontend.h  dr_frontend_common.c  dr_frontend_private.h  dr_frontend_unix.c  dr_frontend_win.c  drconfig.def  dumpevts.c  elm.c  elm.h  mfapi.c  mfapi.def  mfapi.h  our_tchar.h  parser.c  parser.h  policy.c  policy.h  processes.c  processes.h  sample.mfp  services.c  services.h  share.h  tester.c  tests.c  tests.h  utils.c  utils.h
tools/: CMakeLists.txt  CombineRuns  DRcontrol.c  DRkill.c  DRload.c  DRview.c  Makefile  Makefile.common  PCProf  README.md  RunInPar  Summary  address_query.pl  arm_macros_gen.pl  arm_table_chain.pl  arm_table_gen.pl  balloon.c  bmcmp.pl  bmmemabs.pl  bmmemcmp.pl  bmtable.pl  bugcrash.pl  bugdis.pl  bugtitle.pl  caller-profile.pl  closewnd.c  commitmsg.pl  create_process.c  cvs-snapshot.sh  cygwin-bash_profile  cygwin-bashrc  dclick.cpp  dgcstats.pl  dos2ux  drdel.c  drdeploy.c  drdeploy.exe.manifest  drdeploy.in  drloader.c  drview-analyze.pl  (+54 more)
(+2772 files in other folders)
